--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: python3:wiki_parser
     links:
       - wiki_parser_mongodb
+    volumes:
+      - /home/ec/PycharmProjects/WebCrawler_FR:/app
 
   wiki_parser_mongodb:
     build:
@@ -14,6 +16,6 @@ services:
       dockerfile: ./docker/mongodb.dockerfile
     image: mongodb:wiki_parser
     volumes:
-      - /path/for/host/data:/data/db
+      - /home/ec/PycharmProjects/data/wiki_parser_mongodb:/data/db
     expose:
-      -27017:17027
+      - 27017
