--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     image: python3:wiki_parser
     environment:
       PYTHONPATH: '$PYTHONPATH:/app/'
+      PYTHONIOENCODING: 'utf-8'
     links:
       - wiki_parser_mongodb
     volumes:
