--- a/config/nginx/conf.d/front.conf
+++ b/config/nginx/conf.d/front.conf
@@ -9,21 +9,20 @@ server {
     root        /app/client/templates/admin;
     index       index.html;
 
-    location ~ \.(json)$ {
-        if ($http_origin ~* ^https?://([a-z]+\.|)(bpteam|fge)\.net$) {
-            add_header 'Access-Control-Allow-Origin' "$http_origin";
-        }
-        try_files $uri =404;
-    }
-
     location / {
         proxy_pass http://wiki_parser_python:5000/;
     }
 
     # uncomment to avoid processing of calls to non-existing static files by Yii
-    location ~ \.(js|txt|eot|svg|ttf|woff|woff2|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+    location ~ (\.(js|txt|eot|svg|ttf|woff|woff2|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$|/pages/.*\.html) {
         try_files $uri =404;
     }
+
+    location ~ /AdminBSP {
+        root /app/client/templates/AdminBSP;
+        try_files $uri =404;
+    }
+
     error_page 404 /404.html;
 
     location ~ /\.(ht|svn|git) {
